nm/app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: config
        name: frontend
        image: 011737333588.dkr.ecr.us-east-1.amazonaws.com/dao-marketplace:main-c56d780
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
